Fixing spacing for panel

--- a/src/css/_docs-panel.react.css
+++ b/src/css/_docs-panel.react.css
@@ -6,6 +6,7 @@
     bottom: 0;
     right: 0;
     width: calc(100% - 54px);
+    padding-left: 2px;
 }
 
 /* Style for map panel button to show it */
@@ -181,6 +182,7 @@
 
 .toolbar-content-row {
     padding-bottom: 10px;
+    font-size: 14px;
 }
 
 code {
